<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="gravarConfigPosicao" Id="{456eead6-baa8-4bd9-b524-8f603c549c24}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM gravarConfigPosicao
VAR
	bReator: ARRAY[0..2] OF BOOL;
	posicaoAtual: STRING;
	enviaLog: STRING;
	estufaAtual: STRING;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// CONTABILIZA A POSIÇÃO TOTAL  MUST BE FIRST-----------------------------------------------------------------

IF gvl_p.aPositionsE019[gvl.actPos].cor = 0 THEN
	gvl.totalPos[0]:= gvl.totalPos[0]+1;			
END_IF

// VERIFICA SE HA REATOR E MUDA A COR DO QUADRADO ------------------------------------
IF bReator[0] THEN
	gvl_p.aPositionsE019[gvl.actPos].cor:= 1;
	//gvl_p.bCarrinhoReator1:=TRUE;
	gvl.cfgPos_Reat019:=TRUE;
	ELSE
		gvl_p.aPositionsE019[gvl.actPos].cor:=2;
		//gvl_p.bCarrinhoReator1:=FALSE;
		gvl.cfgPos_Reat019:=FALSE;
END_IF

// REGISTRA AS INFORMAÇÕES EM CADA POSIÇÃO -------------------------------------------------------------
FOR gvl.n:=1 TO 24 BY 1 DO
	IF gvl.actPos = gvl.n THEN
		gvl_p.aPositionsE019[gvl.n].numOF:= gvl.cfgPos_OF019;
		gvl_p.aPositionsE019[gvl.n].lote:= gvl.cfgPos_LT019;
		gvl_p.aPositionsE019[gvl.n].class:= gvl.cfgPos_Class019;
		gvl_p.aPositionsE019[gvl.n].pot:= gvl.cfgPos_Pot019;
		gvl_p.aPositionsE019[gvl.n].reator:= gvl.cfgPos_Reat019;
		gvl_p.aPositionsE019[gvl.n].FP:= gvl.cfgPos_FP019;
		gvl_p.aPositionsE019[gvl.n].isolamento:= gvl.cfgPos_Iso019;
		gvl_p.aPositionsE019[gvl.n].text:= insert(gvl.cfgPos_OF019,'-',5);
		gvl_p.aPositionsE019[gvl.n].text:= concat(gvl_p.aPositionsE019[gvl.n].text,gvl.cfgPos_LT019);
	END_IF
END_FOR

// DEFINIÇÃO DOS TEMPOS DE ACORDO COM AS CLASSES ----------------------------------------------
(*IF gvl_p.aPositionsE019[gvl.actPos].class <= 15 THEN
		GVL_p.arrStatusEstufas[gvl.actEst].tempoSecagem := T#60H;
		GVL_p.arrStatusEstufas[gvl.actEst].tempoArmazenagem := T#192H;
		gvl.totalSeca[0]:= '60';
		gvl_p.arrStatusEstufas[gvl.actEst].tempSeca:= 120;
		gvl.totalArm[0]:= '192';
		gvl_p.arrStatusEstufas[gvl.actEst].tempArm:= 70;
		ELSIF gvl_p.aPositionsE019[gvl.actPos].class > 15 THEN
			GVL_p.arrStatusEstufas[gvl.actEst].tempoSecagem:= T#96H;
			GVL_p.arrStatusEstufas[gvl.actEst].tempoArmazenagem:= T#240H;
			gvl.totalSeca[0]:= '96';
			gvl_p.arrStatusEstufas[gvl.actEst].tempSeca:= 120;
			gvl.totalArm[0]:= '240';
			gvl_p.arrStatusEstufas[gvl.actEst].tempArm:= 70;
END_IF*)
IF gvl_p.aPositionsE019[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE019[gvl.actPos].class <= 25 AND gvl_p.aPositionsE019[gvl.actPos].FP = 1 THEN
	GVL_p.arrStatusEstufas[0].tempoSecagem := T#60H;
	GVL_p.arrStatusEstufas[0].tempoArmazenagem := T#192H;
	gvl.totalSeca[0]:= '60';
	gvl_p.arrStatusEstufas[0].tempSeca:= 120;
	gvl.totalArm[0]:= '192';
	gvl_p.arrStatusEstufas[0].tempArm:= 70;
	ELSIF gvl_p.aPositionsE019[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE019[gvl.actPos].class > 25 AND gvl_p.aPositionsE019[gvl.actPos].FP = 1 THEN
		GVL_p.arrStatusEstufas[0].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[0].tempoArmazenagem:= T#240H;
		gvl.totalSeca[0]:= '96';
		gvl_p.arrStatusEstufas[0].tempSeca:= 120;
		gvl.totalArm[0]:= '240';
		gvl_p.arrStatusEstufas[0].tempArm:= 70;
	ELSIF gvl_p.aPositionsE019[gvl.actPos].pot > 750 AND gvl_p.aPositionsE019[gvl.actPos].FP = 1 THEN
		GVL_p.arrStatusEstufas[0].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[0].tempoArmazenagem:= T#240H;
		gvl.totalSeca[0]:= '96';
		gvl_p.arrStatusEstufas[0].tempSeca:= 120;
		gvl.totalArm[0]:= '240';
		gvl_p.arrStatusEstufas[0].tempArm:= 70;
	ELSIF gvl_p.aPositionsE019[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE019[gvl.actPos].class <= 25 AND gvl_p.aPositionsE019[gvl.actPos].FP = 2 THEN
		GVL_p.arrStatusEstufas[0].tempoSecagem:= T#72H;
		GVL_p.arrStatusEstufas[0].tempoArmazenagem:= T#240H;
		gvl.totalSeca[0]:= '72';
		gvl_p.arrStatusEstufas[0].tempSeca:= 120;
		gvl.totalArm[0]:= '240';
		gvl_p.arrStatusEstufas[0].tempArm:= 70;
	ELSIF gvl_p.aPositionsE019[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE019[gvl.actPos].class > 25 AND gvl_p.aPositionsE019[gvl.actPos].FP = 2 THEN
		GVL_p.arrStatusEstufas[0].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[0].tempoArmazenagem:= T#240H;
		gvl.totalSeca[0]:= '96';
		gvl_p.arrStatusEstufas[0].tempSeca:= 120;
		gvl.totalArm[0]:= '240';
		gvl_p.arrStatusEstufas[0].tempArm:= 70;
	ELSIF gvl_p.aPositionsE019[gvl.actPos].pot > 750 AND gvl_p.aPositionsE019[gvl.actPos].FP = 2 THEN
		GVL_p.arrStatusEstufas[0].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[0].tempoArmazenagem:= T#240H;
		gvl.totalSeca[0]:= '96';
		gvl_p.arrStatusEstufas[0].tempSeca:= 120;
		gvl.totalArm[0]:= '240';
		gvl_p.arrStatusEstufas[0].tempArm:= 70;	
END_IF

///// GERADOR DE LOG -------------------------------------------------------------

posicaoAtual:= INT_TO_STRING(gvl.actPos);
estufaAtual:= INT_TO_STRING(gvl.actEst);
envialog:= 'Posição Nº ';
enviaLog:= concat(envialog, posicaoAtual);
enviaLog:= concat(envialog,' gravada. ESTUFA 019');
gvl.logRegister19:= envialog;

gvl.sCmdInsertLog:= 'INSERT INTO [dbo].[LogGeneral] ([HistoricalTime],[Description])VALUES($'$',$'$')';
gvl.sCmdInsertLog:= insert(gvl.sCmdInsertLog,gvl.logRegister19,74);	
gvl.sCmdInsertLog:= insert(gvl.sCmdInsertLog,gvl.sSystemDateTime,71);
gvl.bInsertLog:= TRUE;]]></ST>
    </Implementation>
    <LineIds Name="gravarConfigPosicao">
      <LineId Id="136" Count="4" />
      <LineId Id="104" Count="1" />
      <LineId Id="6" Count="8" />
      <LineId Id="106" Count="0" />
      <LineId Id="15" Count="4" />
      <LineId Id="119" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="142" Count="2" />
      <LineId Id="125" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="25" Count="14" />
      <LineId Id="5" Count="0" />
      <LineId Id="145" Count="41" />
      <LineId Id="128" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="187" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="51" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="195" Count="2" />
      <LineId Id="53" Count="0" />
      <LineId Id="48" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>