<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="gravarConfigPosicao020" Id="{e1099183-6821-4b8d-af38-c80e245213ce}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM gravarConfigPosicao020
VAR
	bReator: ARRAY[0..2] OF BOOL;
	posicaoAtual: STRING;
	enviaLog: STRING;
	estufaAtual: STRING;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// CONTABILIZA A POSIÇÃO TOTAL  MUST BE FIRST-----------------------------------------------------------------

IF gvl_p.aPositionsE020[gvl.actPos].cor = 0 THEN
	gvl.totalPos[1]:= gvl.totalPos[1]+1;			
END_IF

// VERIFICA SE HA REATOR E MUDA A COR DO QUADRADO ------------------------------------
IF bReator[1] THEN
	gvl_p.aPositionsE020[gvl.actPos].cor:= 1;
	//gvl_p.bCarrinhoReator2:=TRUE;
	gvl.cfgPos_Reat020:=TRUE;
	ELSE
		gvl_p.aPositionsE020[gvl.actPos].cor:=2;
		//gvl_p.bCarrinhoReator2:=FALSE;
		gvl.cfgPos_Reat020:=FALSE;
END_IF

// REGISTRA AS INFORMAÇÕES EM CADA POSIÇÃO -------------------------------------------------------------
FOR gvl.n:=1 TO 24 BY 1 DO
	IF gvl.actPos = gvl.n THEN
		gvl_p.aPositionsE020[gvl.n].numOF:= gvl.cfgPos_OF020;
		gvl_p.aPositionsE020[gvl.n].lote:= gvl.cfgPos_LT020;
		gvl_p.aPositionsE020[gvl.n].class:= gvl.cfgPos_Class020;
		gvl_p.aPositionsE020[gvl.n].pot:= gvl.cfgPos_Pot020;
		gvl_p.aPositionsE020[gvl.n].reator:= gvl.cfgPos_Reat020;
		gvl_p.aPositionsE020[gvl.n].FP:= gvl.cfgPos_FP020;
		gvl_p.aPositionsE020[gvl.n].isolamento:= gvl.cfgPos_Iso020;
		gvl_p.aPositionsE020[gvl.n].text:= insert(gvl.cfgPos_OF020,'-',5);
		gvl_p.aPositionsE020[gvl.n].text:= concat(gvl_p.aPositionsE020[gvl.n].text,gvl.cfgPos_LT020);
	END_IF
END_FOR

// DEFINIÇÃO DOS TEMPOS DE ACORDO COM AS CLASSES ----------------------------------------------
(*IF gvl_p.aPositionsE020[gvl.actPos].class <= 15 THEN
		GVL_p.arrStatusEstufas[gvl.actEst].tempoSecagem := T#60H;
		GVL_p.arrStatusEstufas[gvl.actEst].tempoArmazenagem := T#192H;
		gvl.totalSeca[1]:= '60';
		gvl_p.arrStatusEstufas[gvl.actEst].tempSeca:= 120;
		gvl.totalArm[1]:= '192';
		gvl_p.arrStatusEstufas[gvl.actEst].tempArm:= 70;
		ELSIF gvl_p.aPositionsE020[gvl.actPos].class > 15 THEN
			GVL_p.arrStatusEstufas[gvl.actEst].tempoSecagem:= T#96H;
			GVL_p.arrStatusEstufas[gvl.actEst].tempoArmazenagem:= T#240H;
			gvl.totalSeca[1]:= '96';
			gvl_p.arrStatusEstufas[gvl.actEst].tempSeca:= 120;
			gvl.totalArm[1]:= '240';
			gvl_p.arrStatusEstufas[gvl.actEst].tempArm:= 70;
END_IF*)
IF gvl_p.aPositionsE020[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE020[gvl.actPos].isolamento <= 25 AND gvl_p.aPositionsE020[gvl.actPos].FP = 1 THEN
	GVL_p.arrStatusEstufas[1].tempoSecagem := T#60H;
	GVL_p.arrStatusEstufas[1].tempoArmazenagem := T#192H;
	gvl.totalSeca[1]:= '60';
	gvl_p.arrStatusEstufas[1].tempSeca:= 120;
	gvl.totalArm[1]:= '192';
	gvl_p.arrStatusEstufas[1].tempArm:= 70;
	ELSIF gvl_p.aPositionsE020[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE020[gvl.actPos].isolamento > 25 AND gvl_p.aPositionsE020[gvl.actPos].FP = 1 THEN
		GVL_p.arrStatusEstufas[1].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[1].tempoArmazenagem:= T#240H;
		gvl.totalSeca[1]:= '96';
		gvl_p.arrStatusEstufas[1].tempSeca:= 120;
		gvl.totalArm[1]:= '240';
		gvl_p.arrStatusEstufas[1].tempArm:= 70;
	ELSIF gvl_p.aPositionsE020[gvl.actPos].pot > 750 AND gvl_p.aPositionsE020[gvl.actPos].FP = 1 THEN
		GVL_p.arrStatusEstufas[1].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[1].tempoArmazenagem:= T#240H;
		gvl.totalSeca[1]:= '96';
		gvl_p.arrStatusEstufas[1].tempSeca:= 120;
		gvl.totalArm[1]:= '240';
		gvl_p.arrStatusEstufas[1].tempArm:= 70;
	ELSIF gvl_p.aPositionsE020[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE020[gvl.actPos].isolamento <= 25 AND gvl_p.aPositionsE020[gvl.actPos].FP = 2 THEN
		GVL_p.arrStatusEstufas[1].tempoSecagem:= T#72H;
		GVL_p.arrStatusEstufas[1].tempoArmazenagem:= T#240H;
		gvl.totalSeca[1]:= '72';
		gvl_p.arrStatusEstufas[1].tempSeca:= 120;
		gvl.totalArm[1]:= '240';
		gvl_p.arrStatusEstufas[1].tempArm:= 70;
	ELSIF gvl_p.aPositionsE020[gvl.actPos].pot <= 750 AND gvl_p.aPositionsE020[gvl.actPos].isolamento > 25 AND gvl_p.aPositionsE020[gvl.actPos].FP = 2 THEN
		GVL_p.arrStatusEstufas[1].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[1].tempoArmazenagem:= T#240H;
		gvl.totalSeca[1]:= '96';
		gvl_p.arrStatusEstufas[1].tempSeca:= 120;
		gvl.totalArm[1]:= '240';
		gvl_p.arrStatusEstufas[1].tempArm:= 70;
	ELSIF gvl_p.aPositionsE020[gvl.actPos].pot > 750 AND gvl_p.aPositionsE020[gvl.actPos].FP = 2 THEN
		GVL_p.arrStatusEstufas[1].tempoSecagem:= T#96H;
		GVL_p.arrStatusEstufas[1].tempoArmazenagem:= T#240H;
		gvl.totalSeca[1]:= '96';
		gvl_p.arrStatusEstufas[1].tempSeca:= 120;
		gvl.totalArm[1]:= '240';
		gvl_p.arrStatusEstufas[1].tempArm:= 70;	
END_IF

///// GERADOR DE LOG -------------------------------------------------------------

posicaoAtual:= INT_TO_STRING(gvl.actPos);
estufaAtual:= INT_TO_STRING(gvl.actEst);
envialog:= 'Posição Nº ';
enviaLog:= concat(envialog, posicaoAtual);
enviaLog:= concat(envialog,' gravada.  ESTUFA 020');
gvl.logRegister19:= envialog;

gvl.sCmdInsertLog:= 'INSERT INTO [dbo].[LogGeneral] ([HistoricalTime],[Description])VALUES($'$',$'$')';
gvl.sCmdInsertLog:= insert(gvl.sCmdInsertLog,gvl.logRegister19,74);	
gvl.sCmdInsertLog:= insert(gvl.sCmdInsertLog,gvl.sSystemDateTime,71);
gvl.bInsertLog:= TRUE;]]></ST>
    </Implementation>
    <LineIds Name="gravarConfigPosicao020">
      <LineId Id="185" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="187" Count="1" />
      <LineId Id="104" Count="0" />
      <LineId Id="189" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="86" Count="7" />
      <LineId Id="84" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="15" Count="3" />
      <LineId Id="118" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="191" Count="0" />
      <LineId Id="181" Count="3" />
      <LineId Id="23" Count="1" />
      <LineId Id="107" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="129" Count="13" />
      <LineId Id="127" Count="0" />
      <LineId Id="193" Count="41" />
      <LineId Id="192" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="235" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="51" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="243" Count="2" />
      <LineId Id="48" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>